# kwin-gestures

./: .gitignore  CMakeLists.txt  README.md  flake.nix  package.nix
docs/: configuration.md  index.md  (+1 more)
src/: CMakeLists.txt  gesturerecognizer.cpp  gesturerecognizer.h  gestures.cpp  gestures.h  gestureseffect.cpp  gestureseffect.h  inputfilter.cpp  inputfilter.h  main.cpp  metadata.json  virtualkeyboard.cpp  virtualkeyboard.h
src/config/: config.cpp  config.h  gesture.cpp  gesture.h
src/gestures/: condition.cpp  condition.h  gesture.cpp  gesture.h  holdgesture.cpp  holdgesture.h  pinchgesture.cpp  pinchgesture.h  swipegesture.cpp  swipegesture.h
src/gestures/actions/: action.cpp  action.h  command.cpp  command.h  globalshortcut.cpp  globalshortcut.h  keysequence.cpp  keysequence.h
src/kwin/: CMakeLists.txt  dbusinterface.cpp  dbusinterface.h  effect.cpp  effect.h  gestureseffect.cpp  gestureseffect.h  inputfilter.cpp  inputfilter.h  kwinwindow.cpp  kwinwindow.h  main.cpp  metadata.json  utils.h
src/kwin/config/: config.cpp  config.h
src/kwin/impl/: kdeglobalshortcutinvoker.cpp  kdeglobalshortcutinvoker.h  kwinanimationhandler.cpp  kwinanimationhandler.h  kwininput.cpp  kwininput.h  kwinvirtualinputdevice.cpp  kwinvirtualinputdevice.h  kwinwindowdataprovider.cpp  kwinwindowdataprovider.h  kwinwindowinfoprovider.cpp  kwinwindowinfoprovider.h
src/kwin/input/: backend.cpp  backend.h  emitter.cpp  emitter.h  state.cpp  state.h
src/kwin/kcm/: CMakeLists.txt  about.html  kcm.cpp  kcm.h  kcm.qrc  kcm.ui
src/libgestures/: CMakeLists.txt  README.md  condition.cpp  condition.h  globalshortcutinvoker.h  range.cpp  range.h  virtualinputdevice.h  windowdataprovider.cpp  windowdataprovider.h  yaml_convert.h
src/libgestures/actions/: action.cpp  action.h  actiongroup.cpp  actiongroup.h  globalshortcut.cpp  globalshortcut.h  input.cpp  input.h  kdeglobalshortcut.cpp  kdeglobalshortcut.h  keysequence.cpp  keysequence.h  oneactiongroup.cpp  oneactiongroup.h  plasmaglobalshortcut.cpp  plasmaglobalshortcut.h
src/libgestures/conditions/: callbackcondition.h  condition.cpp  conditiongroup.h  legacycondition.cpp
src/libgestures/gestures/: gesture.cpp  gesture.h  gesturerecognizer.cpp  holdgesture.cpp  holdgesture.h  pinchgesture.cpp  pinchgesture.h  swipegesture.cpp  swipegesture.h
src/libgestures/handlers/: motiontriggerhandler.cpp  motiontriggerhandler.h  mousetriggerhandler.h  multitouchmotiontriggerhandler.cpp  multitouchmotiontriggerhandler.h  touchpadtriggerhandler.cpp  touchpadtriggerhandler.h  triggerhandler.cpp
src/libgestures/libgestures/: condition.cpp  condition.h  globals.h  input.cpp  input.h  libgestures.cpp  libgestures.h  logging.cpp  logging.h  range.cpp  range.h  windowinfoprovider.cpp  windowinfoprovider.h  yaml_convert.h
src/libgestures/triggers/: directionalmotiontrigger.cpp  presstrigger.cpp  stroketrigger.h  trigger.cpp  trigger.h
src/libinputactions/: README.md  globals.h  input.cpp  input.h  range.cpp  range.h  window.cpp  window.h  windowinfoprovider.cpp  windowinfoprovider.h  yaml_convert.h
src/libinputactions/actions/: action.cpp  action.h  actiongroup.cpp  actiongroup.h  callback.cpp  callback.h  command.cpp  command.h  input.cpp  input.h  oneactiongroup.cpp  oneactiongroup.h  plasmaglobalshortcut.cpp  plasmaglobalshortcut.h
src/libinputactions/conditions/: callbackcondition.cpp  callbackcondition.h  condition.cpp  condition.h  conditiongroup.cpp  conditiongroup.h  legacycondition.cpp  legacycondition.h
src/libinputactions/handlers/: motion.cpp  motion.h  motiontriggerhandler.cpp  motiontriggerhandler.h  mouse.cpp  mouse.h  mousetriggerhandler.cpp  mousetriggerhandler.h  multitouchmotion.cpp  multitouchmotion.h  multitouchmotiontriggerhandler.cpp  multitouchmotiontriggerhandler.h  touchpad.cpp  touchpad.h  touchpadtriggerhandler.cpp  touchpadtriggerhandler.h  trigger.cpp  trigger.h  triggerhandler.cpp  triggerhandler.h
src/libinputactions/input/: backend.cpp  backend.h  emitter.cpp  emitter.h  state.cpp  state.h
src/libinputactions/triggers/: directionalmotion.cpp  directionalmotion.h  directionalmotiontrigger.cpp  directionalmotiontrigger.h  motion.cpp  motion.h  motiontrigger.cpp  press.cpp  press.h  presstrigger.cpp  stroke.cpp  stroke.h  stroketrigger.cpp  stroketrigger.h  trigger.cpp  trigger.h
tests/: CMakeLists.txt  test_example.cpp  test_example.h  test_gesturerecognizer_hold.cpp  test_gesturerecognizer_hold.h
tests/libgesture/: CMakeLists.txt
tests/libgesture/gestures/: CMakeLists.txt  test_gesturerecognizer_hold.cpp  test_gesturerecognizer_hold.h
tests/libgestures/: CMakeLists.txt  mockwindowdataprovider.cpp  mockwindowdataprovider.h  mockwindowinfoprovider.cpp  mockwindowinfoprovider.h  test_condition.cpp  test_condition.h  utils.h
tests/libgestures/actions/: CMakeLists.txt  test_action.cpp  test_action.h  test_actioninterval.cpp  test_actioninterval.h
tests/libgestures/conditions/: test_conditiongroup.cpp  test_conditiongroup.h
tests/libgestures/gestures/: CMakeLists.txt  test_gesture.cpp  test_gesture.h  test_gesturerecognizer.cpp  test_gesturerecognizer.h  test_gesturerecognizer_hold.cpp  test_gesturerecognizer_hold.h  test_gesturerecognizer_shared.cpp  test_gesturerecognizer_shared.h
tests/libgestures/handlers/: test_triggerhandler.cpp
tests/libgestures/mocks/: mockgestureaction.h  mockinput.h
tests/libgestures/triggers/: test_directionalmotiontrigger.cpp  test_directionalmotiontrigger.h  test_motiontrigger.cpp  test_motiontrigger.h  test_trigger.cpp  test_trigger.h
tests/libinputactions/: CMakeLists.txt  mockwindowinfoprovider.cpp  mockwindowinfoprovider.h  test_condition.cpp  test_condition.h  test_range.cpp  test_range.h  utils.cpp  utils.h
tests/libinputactions/actions/: test_action.cpp  test_action.h  test_actioninterval.h
tests/libinputactions/conditions/: test_conditiongroup.cpp  test_conditiongroup.h
tests/libinputactions/handlers/: test_triggerhandler.cpp  test_triggerhandler.h
tests/libinputactions/mocks/: mockgestureaction.h  mockinput.h  mocktrigger.h  mocktriggerhandler.h
(+122 files in other folders)
